Added presentation section

--- a/index.html
+++ b/index.html
@@ -47,6 +47,32 @@
     </nav>
 
     <!-- Home -->
+    <div class="container my-5">
+        <div class="align-items-center d-sm-flex gap-5 justify-content-center text-center text-sm-start">
+            <img src="img/foto_ritratto.jpg" class="img-fluid img-portrait pb-2 pb-sm-0">
+            <div>
+                <h4 class="orange-text-title">Michela Mariani</h4>
+                <h5 class="pb-2 white-text-title">24 anni</h5>
+                <p class="px-5 px-sm-0 pb-2 white-text">
+                    Sono Michela Mariani, ho 24 anni e attualmente
+                    sono laureanda del corso magistrale di Teoria e
+                    Tecnologia della Comunicazione in Bicocca.
+                    Ho acquisito competenze in HTML, CSS,
+                    JavaScript e React, e sto costruendo progetti
+                    personali per migliorare continuamente le mie
+                    abilità. Cerco lavoro come sviluppatrice front-end,
+                    mi interessa molto tutto quello che riguarda il
+                    mondo UI/UX.<br />
+                    Nel corso del mio percorso universitario ho svolto diversi progetti e utilizzato differenti
+                    tecnologie e linguaggi. Ho creato questo sito con lo scopo di illustrare brevemente quello su cui ho
+                    lavorato.
+                </p>
+                <button class="border-0 light-blue-btn rounded-2 px-2">
+                    Scopri di più
+                </button>
+            </div>
+        </div>
+    </div>
 
 
     <!-- About -->
@@ -102,6 +128,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 
+    <script>
+        let lightBlueButton = document.getElementsByClassName("light-blue-btn");
+    </script>
 </body>
 
 </html>
