Added section education

--- a/index.html
+++ b/index.html
@@ -5,15 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&family=Zain:wght@300;400;700&display=swap"
         rel="stylesheet">
-
-    <!-- Bootstrap (solo per layout e navbar) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Il tuo CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -76,6 +70,81 @@
 
 
     <!-- About -->
+    <div class="light-blue-background position-relative">
+        <div class="container mt-5 text-center text-sm-start position-relative">
+            <h4 class="blue-text-title py-4">About Me</h4>
+
+            <!-- immagine decorativa assoluta -->
+            <img src="/img/prova.svg" alt="decorazione" class="decoration position-absolute start-0 translate-middle-y"
+                style="width:50px; z-index:10;">
+
+            <div class="row align-items-center justify-content-evenly m-0">
+                <div class="col-sm-8 col-12">
+                    <h6 class="blue-text-title pt-2">Liceo delle scienze umane</h6>
+                    <h6 class="black-text-title pb-2">IIS Bachelet - Abbiategrasso</h6>
+                    <p>
+                        Ho frequentato il Liceo delle Scienze Umane dall'anno 2015 fino al 2020, ho scelto questo
+                        percorso perchè mi affiscinava l'idea di studiare il comportamento delle
+                        persone. <br>
+                        Durante gli anni del liceo ho potuto approfondire materie come psicologia, pedagogia, sociologia
+                        e antropologia, ma allo stesso tempo mi sono avvicinata anche tanto alle materie scientifiche,
+                        motivo per cui in triennale ho scelto di intraprendere una strada differente.
+                    </p>
+                </div>
+                <div class="col-sm-3 col-12 diamond rounded-2 my-4 my-sm-0">
+                    <p class="m-0 pb-1 white-text">voto finale</p>
+                    <div class="d-flex align-items-center justify-content-center">
+                        <h3 class="no-rotate white-text-title text-center">93</h3>
+                        <p class="no-rotate pt-3 white-text text-center">/100</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row align-items-center justify-content-evenly m-0">
+                <div class="col-sm-8 col-12">
+                    <h6 class="blue-text-title pt-2">Corso di laurea triennale</h6>
+                    <h6 class="black-text-title pb-2">Informatica</h6>
+                    <p>
+                        Ho frequentato il Liceo delle Scienze Umane dall'anno 2015 fino al 2020, ho scelto questo
+                        percorso perchè mi affiscinava l'idea di studiare il comportamento delle
+                        persone. <br>
+                        Durante gli anni del liceo ho potuto approfondire materie come psicologia, pedagogia, sociologia
+                        e antropologia, ma allo stesso tempo mi sono avvicinata anche tanto alle materie scientifiche,
+                        motivo per cui in triennale ho scelto di intraprendere una strada differente.
+                    </p>
+                </div>
+                <div class="col-sm-3 col-12 diamond rounded-2 my-4 my-sm-0">
+                    <p class="m-0 pb-1 white-text">voto finale</p>
+                    <div class="d-flex align-items-center justify-content-center">
+                        <h3 class="no-rotate white-text-title text-center">88</h3>
+                        <p class="no-rotate pt-3 white-text text-center">/110</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row align-items-center justify-content-evenly m-0">
+                <div class="col-sm-8 col-12">
+                    <h6 class="blue-text-title pt-2">Corso di laurea magistrale</h6>
+                    <h6 class="black-text-title pb-2">Teoria e Tecnologia della Comunicazione</h6>
+                    <p>
+                        Ho frequentato il Liceo delle Scienze Umane dall'anno 2015 fino al 2020, ho scelto questo
+                        percorso perchè mi affiscinava l'idea di studiare il comportamento delle
+                        persone. <br>
+                        Durante gli anni del liceo ho potuto approfondire materie come psicologia, pedagogia, sociologia
+                        e antropologia, ma allo stesso tempo mi sono avvicinata anche tanto alle materie scientifiche,
+                        motivo per cui in triennale ho scelto di intraprendere una strada differente.
+                    </p>
+                </div>
+                <div class="col-sm-3 col-12 diamond rounded-2 my-4 my-sm-0">
+                    <p class="m-0 pb-1 white-text">media</p>
+                    <div class="d-flex align-items-center justify-content-center">
+                        <h3 class="no-rotate white-text-title text-center">28</h3>
+                        <p class="no-rotate pt-3 white-text text-center">/30</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <!-- Projects-->
