Finished section education

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 
     <!-- Home -->
     <div class="container my-5">
-        <div class="align-items-center d-sm-flex gap-5 justify-content-center text-center text-sm-start">
-            <img src="img/foto_ritratto.jpg" class="img-fluid img-portrait pb-2 pb-sm-0">
+        <div class="align-items-center d-md-flex gap-5 justify-content-center text-center text-md-start">
+            <img src="img/foto_ritratto.jpg" class="img-fluid img-portrait pb-2 pb-md-0">
             <div>
                 <h4 class="orange-text-title">Michela Mariani</h4>
                 <h5 class="pb-2 white-text-title">24 anni</h5>
-                <p class="px-5 px-sm-0 pb-2 white-text">
+                <p class="px-5 px-md-0 pb-2 white-text">
                     Sono Michela Mariani, ho 24 anni e attualmente
                     sono laureanda del corso magistrale di Teoria e
                     Tecnologia della Comunicazione in Bicocca.
@@ -70,16 +70,23 @@
 
 
     <!-- About -->
-    <div class="light-blue-background position-relative">
-        <div class="container mt-5 text-center text-sm-start position-relative">
+    <div class="light-blue-background position-relative pb-5">
+        <div class="container mt-5 text-center text-md-start position-relative">
             <h4 class="blue-text-title py-4">About Me</h4>
 
             <!-- immagine decorativa assoluta -->
-            <img src="/img/prova.svg" alt="decorazione" class="decoration position-absolute start-0 translate-middle-y"
-                style="width:50px; z-index:10;">
+            <img src="/img/prova.svg" alt="decorazione"
+                class="decoration d-none d-md-flex position-absolute start-0 translate-middle-y"
+                style="width:25px; z-index:10;">
+
+            <div class="orange-diamonds position-absolute start-0 d-none d-md-block">
+                <div class="diamond-shape diamond1"></div>
+                <div class="diamond-shape diamond2"></div>
+                <div class="diamond-shape diamond3"></div>
+            </div>
 
             <div class="row align-items-center justify-content-evenly m-0">
-                <div class="col-sm-8 col-12">
+                <div class="col-md-8 col-12">
                     <h6 class="blue-text-title pt-2">Liceo delle scienze umane</h6>
                     <h6 class="black-text-title pb-2">IIS Bachelet - Abbiategrasso</h6>
                     <p>
@@ -91,7 +98,7 @@
                         motivo per cui in triennale ho scelto di intraprendere una strada differente.
                     </p>
                 </div>
-                <div class="col-sm-3 col-12 diamond rounded-2 my-4 my-sm-0">
+                <div class="col-md-3 col-12 diamond rounded-2 my-4 my-md-0">
                     <p class="m-0 pb-1 white-text">voto finale</p>
                     <div class="d-flex align-items-center justify-content-center">
                         <h3 class="no-rotate white-text-title text-center">93</h3>
@@ -101,7 +108,7 @@
             </div>
 
             <div class="row align-items-center justify-content-evenly m-0">
-                <div class="col-sm-8 col-12">
+                <div class="col-md-8 col-12">
                     <h6 class="blue-text-title pt-2">Corso di laurea triennale</h6>
                     <h6 class="black-text-title pb-2">Informatica</h6>
                     <p>
@@ -111,9 +118,11 @@
                         Durante gli anni del liceo ho potuto approfondire materie come psicologia, pedagogia, sociologia
                         e antropologia, ma allo stesso tempo mi sono avvicinata anche tanto alle materie scientifiche,
                         motivo per cui in triennale ho scelto di intraprendere una strada differente.
+
+
                     </p>
                 </div>
-                <div class="col-sm-3 col-12 diamond rounded-2 my-4 my-sm-0">
+                <div class="col-md-3 col-12 diamond rounded-2 my-4 my-md-0">
                     <p class="m-0 pb-1 white-text">voto finale</p>
                     <div class="d-flex align-items-center justify-content-center">
                         <h3 class="no-rotate white-text-title text-center">88</h3>
@@ -123,7 +132,7 @@
             </div>
 
             <div class="row align-items-center justify-content-evenly m-0">
-                <div class="col-sm-8 col-12">
+                <div class="col-md-8 col-12 pb-4">
                     <h6 class="blue-text-title pt-2">Corso di laurea magistrale</h6>
                     <h6 class="black-text-title pb-2">Teoria e Tecnologia della Comunicazione</h6>
                     <p>
