--- a/index.html
+++ b/index.html
@@ -61,15 +61,18 @@
                     tecnologie e linguaggi. Ho creato questo sito con lo scopo di illustrare brevemente quello su cui ho
                     lavorato.
                 </p>
-                <button class="border-0 light-blue-btn rounded-2 px-2">
+                <button class="border-0 light-blue-btn pb-2">
                     Scopri di più
                 </button>
+
+
             </div>
         </div>
     </div>
 
 
     <!-- About -->
+    <!-- Sezione education -->
     <div class="light-blue-background position-relative pb-5">
         <div class="container mt-5 text-center text-md-start position-relative">
             <h4 class="blue-text-title py-4">About Me</h4>
@@ -77,7 +80,7 @@
             <!-- immagine decorativa assoluta -->
             <img src="/img/prova.svg" alt="decorazione"
                 class="decoration d-none d-md-flex position-absolute start-0 translate-middle-y"
-                style="width:25px; z-index:10;">
+                style="width:30px; z-index:10;">
 
             <div class="orange-diamonds position-absolute start-0 d-none d-md-block">
                 <div class="diamond-shape diamond1"></div>
@@ -89,7 +92,7 @@
                 <div class="col-md-8 col-12">
                     <h6 class="blue-text-title pt-2">Liceo delle scienze umane</h6>
                     <h6 class="black-text-title pb-2">IIS Bachelet - Abbiategrasso</h6>
-                    <p>
+                    <p class="black-text">
                         Ho frequentato il Liceo delle Scienze Umane dall'anno 2015 fino al 2020, ho scelto questo
                         percorso perchè mi affiscinava l'idea di studiare il comportamento delle
                         persone. <br>
@@ -111,7 +114,7 @@
                 <div class="col-md-8 col-12">
                     <h6 class="blue-text-title pt-2">Corso di laurea triennale</h6>
                     <h6 class="black-text-title pb-2">Informatica</h6>
-                    <p>
+                    <p class="black-text">
                         Ho frequentato il Liceo delle Scienze Umane dall'anno 2015 fino al 2020, ho scelto questo
                         percorso perchè mi affiscinava l'idea di studiare il comportamento delle
                         persone. <br>
@@ -135,7 +138,7 @@
                 <div class="col-md-8 col-12 pb-4">
                     <h6 class="blue-text-title pt-2">Corso di laurea magistrale</h6>
                     <h6 class="black-text-title pb-2">Teoria e Tecnologia della Comunicazione</h6>
-                    <p>
+                    <p class="black-text">
                         Ho frequentato il Liceo delle Scienze Umane dall'anno 2015 fino al 2020, ho scelto questo
                         percorso perchè mi affiscinava l'idea di studiare il comportamento delle
                         persone. <br>
@@ -154,6 +157,91 @@
             </div>
         </div>
     </div>
+
+    <!-- Sezione skills -->
+
+
+    <div class="d-md-flex d-none justify-content-around position-absolute star1 z-2 w-100">
+        <img src="/img/blue_star.svg" style="width: 50px;">
+        <img src="/img/blue_star.svg" style="width: 50px;">
+    </div>
+    <div class="white-background py-5 ">
+        <!-- Idea per ora: due colonne una con linguaggi e stelline, dall'altro software -->
+        <!-- Per i software potrebbero esserci delle immagini (?) -->
+        <div class="container w-100">
+            <div class="row">
+                <div class="col-12 col-sm-6">
+                    <h5 class="blue-text-title text-center text-md-start">Linguaggi</h5>
+                    <div class="align-items-center d-flex justify-content-between px-2 px-sm-0 pt-1">
+                        <p class="black-text mb-0 me-2">HTML</p>
+                        <img src="/icons/cinque_diamanti.svg" alt="cinque stelle">
+                    </div>
+
+                    <div class="align-items-center d-flex justify-content-between px-2 px-sm-0">
+                        <p class="black-text mb-0 me-2">CSS</p>
+                        <img src="/icons/quattro_diamanti.svg" alt="quattro stelle">
+                    </div>
+
+                    <div class="align-items-center d-flex justify-content-between px-2 px-sm-0">
+                        <p class="black-text mb-0 me-2">JavaScript</p>
+                        <img src="/icons/quattro_diamanti.svg" alt="quattro stelle">
+                    </div>
+
+                    <div class="align-items-center d-flex justify-content-between px-2 px-sm-0">
+                        <p class="black-text mb-0 me-2">Java</p>
+                        <img src="/icons/tre_diamanti.svg" alt="tre stelle">
+                    </div>
+
+                    <div class="align-items-center d-flex justify-content-between px-2 px-sm-0">
+                        <p class="black-text mb-0 me-2">C#</p>
+                        <img src="/icons/tre_diamanti.svg" alt="tre stelle">
+                    </div>
+
+                    <div class="align-items-center d-flex justify-content-between px-2 px-sm-0">
+                        <p class="black-text mb-0 me-2">C++</p>
+                        <img src="/icons/due_diamanti.svg" alt="due stelle">
+                    </div>
+
+                    <div class="align-items-center d-flex justify-content-between px-2 px-sm-0">
+                        <p class="black-text mb-0 me-2">TypeScript</p>
+                        <img src="/icons/due_diamanti.svg" alt="due stelle">
+                    </div>
+
+                    <div class="align-items-center d-flex justify-content-between px-2 px-sm-0">
+                        <p class="black-text mb-0 me-2">Prolog</p>
+                        <img src="/icons/un_diamante.svg" alt="una stella">
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6">
+                    <h5 class="blue-text-title pt-4 pt-sm-0 ps-sm-4 text-center text-md-start">Strumenti e tecnologie
+                    </h5>
+                    <div class="d-flex flex-wrap gap-5 justify-content-center justify-content-sm-start pt-4 ps-sm-4">
+                        <img src="icons/bootstrap.svg" style="width: 40px">
+                        <img src="icons/unity.svg" style="width: 40px">
+                        <img src="icons/figma.svg" style="width: 40px">
+                    </div>
+                    <div class="d-flex flex-wrap gap-5 justify-content-center justify-content-sm-start pt-4 ps-sm-4">
+                        <img src="icons/react.svg" style="width: 40px">
+                        <img src="icons/wordpress.svg" style="width: 40px">
+                    </div>
+
+                    <div class="align-items-center d-flex justify-content-between px-2 px-sm-0 pt-4 ps-sm-4">
+                        <p class="black-text mb-0 me-2">BPMN, CMMN, IFML</p>
+                        <img src="/icons/un_diamante.svg" alt="una stella">
+                    </div>
+                    <div class="align-items-center d-flex justify-content-between px-2 px-sm-0 ps-sm-4">
+                        <p class="black-text mb-0 me-2">Jason</p>
+                        <img src="/icons/un_diamante.svg" alt="una stella">
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
 
 
     <!-- Projects-->
