Added projects section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Home -->
     <div class="container my-5">
         <div class="align-items-center d-md-flex gap-5 justify-content-center text-center text-md-start">
-            <img src="img/foto_ritratto.jpg" class="img-fluid img-portrait pb-2 pb-md-0">
+            <img src="img/immagine_curriculum.svg" class="img-fluid img-portrait pb-2 pb-md-0">
             <div>
                 <h4 class="orange-text-title">Michela Mariani</h4>
                 <h5 class="pb-2 white-text-title">24 anni</h5>
@@ -63,9 +63,11 @@
                     tecnologie e linguaggi. Ho creato questo sito con lo scopo di illustrare brevemente quello su cui ho
                     lavorato.
                 </p>
-                <button class="border-0 light-blue-btn pb-2">
-                    Scopri di più
+                <button
+                    class="align-items-center border-0 d-flex justify-content-center light-blue-btn px-2 position-relative">
+                    <span>More</span>
                 </button>
+
 
 
             </div>
@@ -245,6 +247,228 @@
 
 
     <!-- Projects-->
+    <div id="image-text-slider" class="splide py-5 px-5" aria-label="Immagini e testi">
+        <div class="splide__track">
+            <ul class="splide__list">
+                <!-- SAM -->
+                <li
+                    class="splide__slide d-flex flex-md-row flex-column align-items-center text-center text-md-start px-3">
+
+                    <!-- Immagine -->
+                    <div class="col-12 col-md-4 d-flex justify-content-center mb-3 mb-md-0">
+                        <img src="/img/miniatura_sam_special.svg" alt="miniatura progetto" class="img-fluid">
+                    </div>
+
+                    <!-- Testo -->
+                    <div class="col-12 col-md-8 ps-md-4">
+                        <h3 class="white-text-title pb-2 px-3">Progetto in Wordpress</h3>
+                        <p class="white-text px-3">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non metus fermentum, cursus
+                            lacus ornare, auctor nunc.
+                            Aliquam purus tortor, luctus et purus id, sollicitudin vehicula magna. Praesent pellentesque
+                            dapibus ipsum ac scelerisque.
+                            Vestibulum non congue neque. Aliquam non lorem ac diam dapibus tincidunt. Proin varius
+                            pharetra tellus, vitae dapibus nisi sollicitudin in.
+                        </p>
+                    </div>
+
+                </li>
+
+                <!-- Ergonomia -->
+                <li
+                    class="splide__slide d-flex flex-md-row flex-column align-items-center text-center text-md-start px-3">
+
+                    <!-- Immagine -->
+                    <div class="col-12 col-md-4 d-flex justify-content-center mb-3 mb-md-0">
+                        <img src="/img/miniatura_ergonomia_special.svg" alt="miniatura progetto" class="img-fluid">
+                    </div>
+
+                    <!-- Testo -->
+                    <div class="col-12 col-md-8 ps-md-4">
+                        <h3 class="white-text-title pb-2 px-3">Analisi Longitudinale</h3>
+                        <p class="white-text px-3">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non metus fermentum, cursus
+                            lacus ornare, auctor nunc.
+                            Aliquam purus tortor, luctus et purus id, sollicitudin vehicula magna. Praesent pellentesque
+                            dapibus ipsum ac scelerisque.
+                            Vestibulum non congue neque. Aliquam non lorem ac diam dapibus tincidunt. Proin varius
+                            pharetra tellus, vitae dapibus nisi sollicitudin in.
+                        </p>
+                    </div>
+
+                </li>
+
+                <!-- Sistemi informativi -->
+                <li
+                    class="splide__slide d-flex flex-md-row flex-column align-items-center text-center text-md-start px-3">
+
+                    <!-- Immagine -->
+                    <div class="col-12 col-md-4 d-flex justify-content-center mb-3 mb-md-0">
+                        <img src="/img/miniatura_sistemi_special.svg" alt="miniatura progetto" class="img-fluid">
+                    </div>
+
+                    <!-- Testo -->
+                    <div class="col-12 col-md-8 ps-md-4">
+                        <h3 class="white-text-title pb-2 px-3">Modellazione di un processo <br> aziendale</h3>
+                        <p class="white-text px-3">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non metus fermentum, cursus
+                            lacus ornare, auctor nunc.
+                            Aliquam purus tortor, luctus et purus id, sollicitudin vehicula magna. Praesent pellentesque
+                            dapibus ipsum ac scelerisque.
+                            Vestibulum non congue neque. Aliquam non lorem ac diam dapibus tincidunt. Proin varius
+                            pharetra tellus, vitae dapibus nisi sollicitudin in.
+                        </p>
+                    </div>
+
+                </li>
+
+                <!-- Realtà virtuale -->
+                <li
+                    class="splide__slide d-flex flex-md-row flex-column align-items-center text-center text-md-start px-3">
+
+                    <!-- Immagine -->
+                    <div class="col-12 col-md-4 d-flex justify-content-center mb-3 mb-md-0">
+                        <img src="/img/miniatura_vr_special.svg" alt="miniatura progetto" class="img-fluid">
+                    </div>
+
+                    <!-- Testo -->
+                    <div class="col-12 col-md-8 ps-md-4">
+                        <h3 class="white-text-title pb-2 px-3">Progetto Unity</h3>
+                        <p class="white-text px-3">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non metus fermentum, cursus
+                            lacus ornare, auctor nunc.
+                            Aliquam purus tortor, luctus et purus id, sollicitudin vehicula magna. Praesent pellentesque
+                            dapibus ipsum ac scelerisque.
+                            Vestibulum non congue neque. Aliquam non lorem ac diam dapibus tincidunt. Proin varius
+                            pharetra tellus, vitae dapibus nisi sollicitudin in.
+                        </p>
+                    </div>
+
+                </li>
+
+                <!-- Web App -->
+                <li
+                    class="splide__slide d-flex flex-md-row flex-column align-items-center text-center text-md-start px-3">
+
+                    <!-- Immagine -->
+                    <div class="col-12 col-md-4 d-flex justify-content-center mb-3 mb-md-0">
+                        <img src="/img/miniatura_web_app_special.svg" alt="miniatura progetto" class="img-fluid">
+                    </div>
+
+                    <!-- Testo -->
+                    <div class="col-12 col-md-8 ps-md-4">
+                        <h3 class="white-text-title pb-2 px-3">Progetto React</h3>
+                        <p class="white-text px-3">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non metus fermentum, cursus
+                            lacus ornare, auctor nunc.
+                            Aliquam purus tortor, luctus et purus id, sollicitudin vehicula magna. Praesent pellentesque
+                            dapibus ipsum ac scelerisque.
+                            Vestibulum non congue neque. Aliquam non lorem ac diam dapibus tincidunt. Proin varius
+                            pharetra tellus, vitae dapibus nisi sollicitudin in.
+                        </p>
+                    </div>
+
+                </li>
+
+                <!-- CVeDI -->
+                <li
+                    class="splide__slide d-flex flex-md-row flex-column align-items-center text-center text-md-start px-3">
+
+                    <!-- Immagine -->
+                    <div class="col-12 col-md-4 d-flex justify-content-center mb-3 mb-md-0">
+                        <img src="/img/miniatura_CVeDI_special.svg" alt="miniatura progetto" class="img-fluid">
+                    </div>
+
+                    <!-- Testo -->
+                    <div class="col-12 col-md-8 ps-md-4">
+                        <h3 class="white-text-title pb-2 px-3">Progetto HTML, CSS, JS <br> e Bootstrap</h3>
+                        <p class="white-text px-3">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non metus fermentum, cursus
+                            lacus ornare, auctor nunc.
+                            Aliquam purus tortor, luctus et purus id, sollicitudin vehicula magna. Praesent pellentesque
+                            dapibus ipsum ac scelerisque.
+                            Vestibulum non congue neque. Aliquam non lorem ac diam dapibus tincidunt. Proin varius
+                            pharetra tellus, vitae dapibus nisi sollicitudin in.
+                        </p>
+                    </div>
+
+                </li>
+
+                <!-- Volantino pizzeria -->
+                <li
+                    class="splide__slide d-flex flex-md-row flex-column align-items-center text-center text-md-start px-3">
+
+                    <!-- Immagine -->
+                    <div class="col-12 col-md-4 d-flex justify-content-center mb-3 mb-md-0">
+                        <img src="/img/miniatura_CVeDI_special.svg" alt="miniatura progetto" class="img-fluid">
+                    </div>
+
+                    <!-- Testo -->
+                    <div class="col-12 col-md-8 ps-md-4">
+                        <h3 class="white-text-title pb-2 px-3">Volantino pizzeria con Figma</h3>
+                        <p class="white-text px-3">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non metus fermentum, cursus
+                            lacus ornare, auctor nunc.
+                            Aliquam purus tortor, luctus et purus id, sollicitudin vehicula magna. Praesent pellentesque
+                            dapibus ipsum ac scelerisque.
+                            Vestibulum non congue neque. Aliquam non lorem ac diam dapibus tincidunt. Proin varius
+                            pharetra tellus, vitae dapibus nisi sollicitudin in.
+                        </p>
+                    </div>
+
+                </li>
+
+                <!-- MB Runners -->
+                <li
+                    class="splide__slide d-flex flex-md-row flex-column align-items-center text-center text-md-start px-3">
+
+                    <!-- Immagine -->
+                    <div class="col-12 col-md-4 d-flex justify-content-center mb-3 mb-md-0">
+                        <img src="/img/miniatura_CVeDI_special.svg" alt="miniatura progetto" class="img-fluid">
+                    </div>
+
+                    <!-- Testo -->
+                    <div class="col-12 col-md-8 ps-md-4">
+                        <h3 class="white-text-title pb-2 px-3">MB Runners sito con HTML, <br>CSS, JS e Boostrap</h3>
+                        <p class="white-text px-3">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non metus fermentum, cursus
+                            lacus ornare, auctor nunc.
+                            Aliquam purus tortor, luctus et purus id, sollicitudin vehicula magna. Praesent pellentesque
+                            dapibus ipsum ac scelerisque.
+                            Vestibulum non congue neque. Aliquam non lorem ac diam dapibus tincidunt. Proin varius
+                            pharetra tellus, vitae dapibus nisi sollicitudin in.
+                        </p>
+                    </div>
+
+                </li>
+
+                <!-- Progetto tesi magistrale -->
+                <li
+                    class="splide__slide d-flex flex-md-row flex-column align-items-center text-center text-md-start px-3">
+
+                    <!-- Immagine -->
+                    <div class="col-12 col-md-4 d-flex justify-content-center mb-3 mb-md-0">
+                        <img src="/img/miniatura_CVeDI_special.svg" alt="miniatura progetto" class="img-fluid">
+                    </div>
+
+                    <!-- Testo -->
+                    <div class="col-12 col-md-8 ps-md-4">
+                        <h3 class="white-text-title pb-2 px-3">Progetto Unity + JaCaMo </h3>
+                        <p class="white-text px-3">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non metus fermentum, cursus
+                            lacus ornare, auctor nunc.
+                            Aliquam purus tortor, luctus et purus id, sollicitudin vehicula magna. Praesent pellentesque
+                            dapibus ipsum ac scelerisque.
+                            Vestibulum non congue neque. Aliquam non lorem ac diam dapibus tincidunt. Proin varius
+                            pharetra tellus, vitae dapibus nisi sollicitudin in.
+                        </p>
+                    </div>
+
+                </li>
+            </ul>
+        </div>
+    </div>
+
 
 
 
@@ -297,8 +521,21 @@
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
     <script>
         let lightBlueButton = document.getElementsByClassName("light-blue-btn");
+
+        document.addEventListener('DOMContentLoaded', function () {
+            new Splide('#image-text-slider', {
+                type: 'loop',
+                perPage: 1,
+                pagination: true,
+                arrows: true,
+                autoplay: true,
+                interval: 4000,
+            }).mount();
+        });
+
+
     </script>
-    
+
 </body>
 
 </html>
