--- a/sam.html
+++ b/sam.html
@@ -171,7 +171,7 @@
                     <li>Sviluppi futuri</li>
                 </ul>
                 <a href="img/SAM/Documentazione_SAM.pdf" target="_blank"
-                    class="white-text-title h5 text-decoration-none">Cliccla qui per aprire il PDF</a>
+                    class="white-text-title h5 text-decoration-none">Clicca qui per aprire il PDF</a>
             </div>
             <div class="align-items-center col-md-6 d-none d-md-flex justify-content-center">
                 <img src="/img/SAM/lampada.svg" class="img-fluid img-portrait">
